--- a/README
+++ b/README
@@ -10,14 +10,24 @@ Installing the payload software
 	1.	python
 	2.	pymavlink
 		1.	`pip install pymavlink`
-	3.	rtl-sdr
+	3.  pyserial
+		1.  `sudo apt-get install python-serial`
+	4.	rtl-sdr
 		1.	`git clone https://github.com/steve-m/librtlsdr`
 		2.	`mkdir librtlsdr/build`
 		3.	`cd librtlsddr/build`
-		4.	`sudo cmake ../ -DINSTALL_UDEV_RULES=ON`
+		4.	`sudo cmake ../ -DINSTALL_UDEV_RULES=ON -DDETACH_KERNEL_DRIVER=ON`
 		5.	`make`
 		6.	`sudo make install`
-		7.	`ldconfig`
+		7.	`sudo ldconfig`
+	5.	fftw
+		1.	`wget http://fftw.org/fftw-3.3.4.tar.gz`
+		2.	`tar -xzf fftw-3.3.4.tar.gz`
+		3.	`cd fftw-3.3.4`
+		4.	`./configure`
+		5.	`make`
+		6.	`sudo make install`
+		7.	`sudo ldconfig`
 2.	Install the software
 	1.	`cd <radio_collar_tracker_drone>`
 	2.  `./autogen.sh`
