--- a/doc/rct_manual.tex
+++ b/doc/rct_manual.tex
@@ -4,11 +4,13 @@
 \SetWatermarkScale{7}
 \title{Radio Collar Tracker Flight Operations Manual}
 \author{Eric Lo, Project Manager\\Nathan Hui, Project Lead\\Engineers for Exploration, UC San Diego}
-\date{\today\\v0.6}
+\date{\today\\v0.7}
 \usepackage{fullpage}
 \usepackage{hyperref}
 \usepackage{mdframed}
 \usepackage{bookmark}
+\usepackage{appendix}
+\usepackage{pdfpages}
 \hypersetup{
     colorlinks,
     citecolor=black,
@@ -811,5 +813,9 @@
 				\end{figure}
 			\item Click the ``CONNECT'' button.
 		\end{enumerate}
+	\begin{appendices}
+		\chapter{Flight Operations Checklist}
+		% Insert pdf
+	\end{appendices}
 \printglossaries
 \end{document}
